@@ -186,3 +186,83 @@ r     pmulld a77700084a491a0ef099b6dd61462ec3 e70a9c61f55fce335d68e1a25652a804 3
 m     pmulld a77700084a491a0ef099b6dd61462ec3 e70a9c61f55fce335d68e1a25652a804 306be308b0b974caedc5f4da103eb30c
 r     pmulld 1dd493f59184345437d5e366d0e20c30 c50f1401e45b82d3086a7a39a1e6217d edbeb7f57c65c93cb53a3db645122370
 m     pmulld 1dd493f59184345437d5e366d0e20c30 c50f1401e45b82d3086a7a39a1e6217d edbeb7f57c65c93cb53a3db645122370
+r    blendpd $0 3a542e238fe5d1793d1148867eb08f81 b79cd058188318692112ca1cf9f1dd31 b79cd058188318692112ca1cf9f1dd31
+m    blendpd $0 3a542e238fe5d1793d1148867eb08f81 b79cd058188318692112ca1cf9f1dd31 b79cd058188318692112ca1cf9f1dd31
+r    blendpd $1 3a542e238fe5d1793d1148867eb08f81 b79cd058188318692112ca1cf9f1dd31 b79cd058188318693d1148867eb08f81
+m    blendpd $1 3a542e238fe5d1793d1148867eb08f81 b79cd058188318692112ca1cf9f1dd31 b79cd058188318693d1148867eb08f81
+r    blendpd $2 3a542e238fe5d1793d1148867eb08f81 b79cd058188318692112ca1cf9f1dd31 3a542e238fe5d1792112ca1cf9f1dd31
+m    blendpd $2 3a542e238fe5d1793d1148867eb08f81 b79cd058188318692112ca1cf9f1dd31 3a542e238fe5d1792112ca1cf9f1dd31
+r    blendpd $3 3a542e238fe5d1793d1148867eb08f81 b79cd058188318692112ca1cf9f1dd31 3a542e238fe5d1793d1148867eb08f81
+m    blendpd $3 3a542e238fe5d1793d1148867eb08f81 b79cd058188318692112ca1cf9f1dd31 3a542e238fe5d1793d1148867eb08f81
+r    blendpd $0 5842cbfee0f72e2ade18612787bc73e3 19ffced22c62cba0822c4c377b82984c 19ffced22c62cba0822c4c377b82984c
+m    blendpd $0 5842cbfee0f72e2ade18612787bc73e3 19ffced22c62cba0822c4c377b82984c 19ffced22c62cba0822c4c377b82984c
+r    blendpd $1 5842cbfee0f72e2ade18612787bc73e3 19ffced22c62cba0822c4c377b82984c 19ffced22c62cba0de18612787bc73e3
+m    blendpd $1 5842cbfee0f72e2ade18612787bc73e3 19ffced22c62cba0822c4c377b82984c 19ffced22c62cba0de18612787bc73e3
+r    blendpd $2 5842cbfee0f72e2ade18612787bc73e3 19ffced22c62cba0822c4c377b82984c 5842cbfee0f72e2a822c4c377b82984c
+m    blendpd $2 5842cbfee0f72e2ade18612787bc73e3 19ffced22c62cba0822c4c377b82984c 5842cbfee0f72e2a822c4c377b82984c
+r    blendpd $3 5842cbfee0f72e2ade18612787bc73e3 19ffced22c62cba0822c4c377b82984c 5842cbfee0f72e2ade18612787bc73e3
+m    blendpd $3 5842cbfee0f72e2ade18612787bc73e3 19ffced22c62cba0822c4c377b82984c 5842cbfee0f72e2ade18612787bc73e3
+r    blendpd $0 d4ec68f21f468712f7b8ab3708137382 478209dbbd84d92508847c7642a20df9 478209dbbd84d92508847c7642a20df9
+m    blendpd $0 d4ec68f21f468712f7b8ab3708137382 478209dbbd84d92508847c7642a20df9 478209dbbd84d92508847c7642a20df9
+r    blendpd $1 d4ec68f21f468712f7b8ab3708137382 478209dbbd84d92508847c7642a20df9 478209dbbd84d925f7b8ab3708137382
+m    blendpd $1 d4ec68f21f468712f7b8ab3708137382 478209dbbd84d92508847c7642a20df9 478209dbbd84d925f7b8ab3708137382
+r    blendpd $2 d4ec68f21f468712f7b8ab3708137382 478209dbbd84d92508847c7642a20df9 d4ec68f21f46871208847c7642a20df9
+m    blendpd $2 d4ec68f21f468712f7b8ab3708137382 478209dbbd84d92508847c7642a20df9 d4ec68f21f46871208847c7642a20df9
+r    blendpd $3 d4ec68f21f468712f7b8ab3708137382 478209dbbd84d92508847c7642a20df9 d4ec68f21f468712f7b8ab3708137382
+m    blendpd $3 d4ec68f21f468712f7b8ab3708137382 478209dbbd84d92508847c7642a20df9 d4ec68f21f468712f7b8ab3708137382
+r    blendpd $0 0b9c016be95f18de62bba1a11cc04c89 9c727edf66767ca38fe6d7c56a5ff965 9c727edf66767ca38fe6d7c56a5ff965
+m    blendpd $0 0b9c016be95f18de62bba1a11cc04c89 9c727edf66767ca38fe6d7c56a5ff965 9c727edf66767ca38fe6d7c56a5ff965
+r    blendpd $1 0b9c016be95f18de62bba1a11cc04c89 9c727edf66767ca38fe6d7c56a5ff965 9c727edf66767ca362bba1a11cc04c89
+m    blendpd $1 0b9c016be95f18de62bba1a11cc04c89 9c727edf66767ca38fe6d7c56a5ff965 9c727edf66767ca362bba1a11cc04c89
+r    blendpd $2 0b9c016be95f18de62bba1a11cc04c89 9c727edf66767ca38fe6d7c56a5ff965 0b9c016be95f18de8fe6d7c56a5ff965
+m    blendpd $2 0b9c016be95f18de62bba1a11cc04c89 9c727edf66767ca38fe6d7c56a5ff965 0b9c016be95f18de8fe6d7c56a5ff965
+r    blendpd $3 0b9c016be95f18de62bba1a11cc04c89 9c727edf66767ca38fe6d7c56a5ff965 0b9c016be95f18de62bba1a11cc04c89
+m    blendpd $3 0b9c016be95f18de62bba1a11cc04c89 9c727edf66767ca38fe6d7c56a5ff965 0b9c016be95f18de62bba1a11cc04c89
+r    blendpd $0 579f90d5d9cd1c3afceebf50e0d0ba24 761b274ac4c4f0c7f31ed81010c417bc 761b274ac4c4f0c7f31ed81010c417bc
+m    blendpd $0 579f90d5d9cd1c3afceebf50e0d0ba24 761b274ac4c4f0c7f31ed81010c417bc 761b274ac4c4f0c7f31ed81010c417bc
+r    blendpd $1 579f90d5d9cd1c3afceebf50e0d0ba24 761b274ac4c4f0c7f31ed81010c417bc 761b274ac4c4f0c7fceebf50e0d0ba24
+m    blendpd $1 579f90d5d9cd1c3afceebf50e0d0ba24 761b274ac4c4f0c7f31ed81010c417bc 761b274ac4c4f0c7fceebf50e0d0ba24
+r    blendpd $2 579f90d5d9cd1c3afceebf50e0d0ba24 761b274ac4c4f0c7f31ed81010c417bc 579f90d5d9cd1c3af31ed81010c417bc
+m    blendpd $2 579f90d5d9cd1c3afceebf50e0d0ba24 761b274ac4c4f0c7f31ed81010c417bc 579f90d5d9cd1c3af31ed81010c417bc
+r    blendpd $3 579f90d5d9cd1c3afceebf50e0d0ba24 761b274ac4c4f0c7f31ed81010c417bc 579f90d5d9cd1c3afceebf50e0d0ba24
+m    blendpd $3 579f90d5d9cd1c3afceebf50e0d0ba24 761b274ac4c4f0c7f31ed81010c417bc 579f90d5d9cd1c3afceebf50e0d0ba24
+r    blendpd $0 1541139c8b1cd0d1a11d81326f4e7880 30c9028972f8733d11f7fa4450de2529 30c9028972f8733d11f7fa4450de2529
+m    blendpd $0 1541139c8b1cd0d1a11d81326f4e7880 30c9028972f8733d11f7fa4450de2529 30c9028972f8733d11f7fa4450de2529
+r    blendpd $1 1541139c8b1cd0d1a11d81326f4e7880 30c9028972f8733d11f7fa4450de2529 30c9028972f8733da11d81326f4e7880
+m    blendpd $1 1541139c8b1cd0d1a11d81326f4e7880 30c9028972f8733d11f7fa4450de2529 30c9028972f8733da11d81326f4e7880
+r    blendpd $2 1541139c8b1cd0d1a11d81326f4e7880 30c9028972f8733d11f7fa4450de2529 1541139c8b1cd0d111f7fa4450de2529
+m    blendpd $2 1541139c8b1cd0d1a11d81326f4e7880 30c9028972f8733d11f7fa4450de2529 1541139c8b1cd0d111f7fa4450de2529
+r    blendpd $3 1541139c8b1cd0d1a11d81326f4e7880 30c9028972f8733d11f7fa4450de2529 1541139c8b1cd0d1a11d81326f4e7880
+m    blendpd $3 1541139c8b1cd0d1a11d81326f4e7880 30c9028972f8733d11f7fa4450de2529 1541139c8b1cd0d1a11d81326f4e7880
+r    blendpd $0 a1cd852d9cd970502d146432e64644c9 25c80a060da03fb0c33ebc4b44b8ddd8 25c80a060da03fb0c33ebc4b44b8ddd8
+m    blendpd $0 a1cd852d9cd970502d146432e64644c9 25c80a060da03fb0c33ebc4b44b8ddd8 25c80a060da03fb0c33ebc4b44b8ddd8
+r    blendpd $1 a1cd852d9cd970502d146432e64644c9 25c80a060da03fb0c33ebc4b44b8ddd8 25c80a060da03fb02d146432e64644c9
+m    blendpd $1 a1cd852d9cd970502d146432e64644c9 25c80a060da03fb0c33ebc4b44b8ddd8 25c80a060da03fb02d146432e64644c9
+r    blendpd $2 a1cd852d9cd970502d146432e64644c9 25c80a060da03fb0c33ebc4b44b8ddd8 a1cd852d9cd97050c33ebc4b44b8ddd8
+m    blendpd $2 a1cd852d9cd970502d146432e64644c9 25c80a060da03fb0c33ebc4b44b8ddd8 a1cd852d9cd97050c33ebc4b44b8ddd8
+r    blendpd $3 a1cd852d9cd970502d146432e64644c9 25c80a060da03fb0c33ebc4b44b8ddd8 a1cd852d9cd970502d146432e64644c9
+m    blendpd $3 a1cd852d9cd970502d146432e64644c9 25c80a060da03fb0c33ebc4b44b8ddd8 a1cd852d9cd970502d146432e64644c9
+r    blendpd $0 5791e2f2a78f37627c9fe23c60c5d82b b3633c2f304791cde6c097130b5efcf6 b3633c2f304791cde6c097130b5efcf6
+m    blendpd $0 5791e2f2a78f37627c9fe23c60c5d82b b3633c2f304791cde6c097130b5efcf6 b3633c2f304791cde6c097130b5efcf6
+r    blendpd $1 5791e2f2a78f37627c9fe23c60c5d82b b3633c2f304791cde6c097130b5efcf6 b3633c2f304791cd7c9fe23c60c5d82b
+m    blendpd $1 5791e2f2a78f37627c9fe23c60c5d82b b3633c2f304791cde6c097130b5efcf6 b3633c2f304791cd7c9fe23c60c5d82b
+r    blendpd $2 5791e2f2a78f37627c9fe23c60c5d82b b3633c2f304791cde6c097130b5efcf6 5791e2f2a78f3762e6c097130b5efcf6
+m    blendpd $2 5791e2f2a78f37627c9fe23c60c5d82b b3633c2f304791cde6c097130b5efcf6 5791e2f2a78f3762e6c097130b5efcf6
+r    blendpd $3 5791e2f2a78f37627c9fe23c60c5d82b b3633c2f304791cde6c097130b5efcf6 5791e2f2a78f37627c9fe23c60c5d82b
+m    blendpd $3 5791e2f2a78f37627c9fe23c60c5d82b b3633c2f304791cde6c097130b5efcf6 5791e2f2a78f37627c9fe23c60c5d82b
+r    blendpd $0 94d7265949ca62b46a8a793cf9d5f0d1 35e7926e777aa43f56470887bfdd3daf 35e7926e777aa43f56470887bfdd3daf
+m    blendpd $0 94d7265949ca62b46a8a793cf9d5f0d1 35e7926e777aa43f56470887bfdd3daf 35e7926e777aa43f56470887bfdd3daf
+r    blendpd $1 94d7265949ca62b46a8a793cf9d5f0d1 35e7926e777aa43f56470887bfdd3daf 35e7926e777aa43f6a8a793cf9d5f0d1
+m    blendpd $1 94d7265949ca62b46a8a793cf9d5f0d1 35e7926e777aa43f56470887bfdd3daf 35e7926e777aa43f6a8a793cf9d5f0d1
+r    blendpd $2 94d7265949ca62b46a8a793cf9d5f0d1 35e7926e777aa43f56470887bfdd3daf 94d7265949ca62b456470887bfdd3daf
+m    blendpd $2 94d7265949ca62b46a8a793cf9d5f0d1 35e7926e777aa43f56470887bfdd3daf 94d7265949ca62b456470887bfdd3daf
+r    blendpd $3 94d7265949ca62b46a8a793cf9d5f0d1 35e7926e777aa43f56470887bfdd3daf 94d7265949ca62b46a8a793cf9d5f0d1
+m    blendpd $3 94d7265949ca62b46a8a793cf9d5f0d1 35e7926e777aa43f56470887bfdd3daf 94d7265949ca62b46a8a793cf9d5f0d1
+r    blendpd $0 b2ed4ecc1e172df2d3a0a41fce854ae7 06a10a317fc4b5b3ef9f8c927c405d2f 06a10a317fc4b5b3ef9f8c927c405d2f
+m    blendpd $0 b2ed4ecc1e172df2d3a0a41fce854ae7 06a10a317fc4b5b3ef9f8c927c405d2f 06a10a317fc4b5b3ef9f8c927c405d2f
+r    blendpd $1 b2ed4ecc1e172df2d3a0a41fce854ae7 06a10a317fc4b5b3ef9f8c927c405d2f 06a10a317fc4b5b3d3a0a41fce854ae7
+m    blendpd $1 b2ed4ecc1e172df2d3a0a41fce854ae7 06a10a317fc4b5b3ef9f8c927c405d2f 06a10a317fc4b5b3d3a0a41fce854ae7
+r    blendpd $2 b2ed4ecc1e172df2d3a0a41fce854ae7 06a10a317fc4b5b3ef9f8c927c405d2f b2ed4ecc1e172df2ef9f8c927c405d2f
+m    blendpd $2 b2ed4ecc1e172df2d3a0a41fce854ae7 06a10a317fc4b5b3ef9f8c927c405d2f b2ed4ecc1e172df2ef9f8c927c405d2f
+r    blendpd $3 b2ed4ecc1e172df2d3a0a41fce854ae7 06a10a317fc4b5b3ef9f8c927c405d2f b2ed4ecc1e172df2d3a0a41fce854ae7
+m    blendpd $3 b2ed4ecc1e172df2d3a0a41fce854ae7 06a10a317fc4b5b3ef9f8c927c405d2f b2ed4ecc1e172df2d3a0a41fce854ae7
